--- a/Media/nasa-tv.html
+++ b/Media/nasa-tv.html
@@ -527,39 +527,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script>
-        // Show Public Feed
-        $('#btnPublic').on('click', function(){
-            $('#feedPublic').removeClass('d-none');
-            $('#feedMedia').addClass('d-none');
-            $('#btnPublic').removeClass('btn-outline-primary').addClass('btn-primary');
-            $('#btnMedia').removeClass('btn-primary').addClass('btn-outline-primary');
-        });
-
-        // Show Media Feed
-        $('#btnMedia').on('click', function(){
-            $('#feedPublic').addClass('d-none');
-            $('#feedMedia').removeClass('d-none');
-            $('#btnPublic').removeClass('btn-primary').addClass('btn-outline-primary');
-            $('#btnMedia').removeClass('btn-outline-primary').addClass('btn-primary');
-        });
-
-        // Schedule Toggles
-        $('button.schedule').on('click', function(e){
-
-            // Check if section is already open
-            if ($(this).hasClass('btn-light')) {
-                // Toggle current collapse
-                $('#collapse' + $(this).attr('data-target')).toggleClass('show');
-                $('button.schedule').removeClass('btn-light').addClass('btn-outline-light');
-            } else {
-
-                // Close current collapse, open new collapse
-                $('button.schedule').removeClass('btn-light').addClass('btn-outline-light');
-                $(this).removeClass('btn-outline-light').addClass('btn-light');
-                $('.collapse').removeClass('show');
-                $('#collapse' + $(this).attr('data-target')).addClass('show');
-            }
-        });
-    </script>
+    <script src="../js/player.js"></script>
 </html>
