--- a/Missions/artemis.html
+++ b/Missions/artemis.html
@@ -161,68 +161,7 @@
             <div class="col-12">
                 <h1 class="mb-4">Related Stories</h1>
             </div>
-            <div class="card-deck">
-                <div class="col-lg-4">
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/51989954220_d70bbb03da_k.jpg?itok=A4HAwx7-">
-                        <div class="card-body">
-                            <p class="article-subtitle">Artemis<i>Apr 11, 2022</i></p>
-                            <h5 class="card-title">NASA to Discuss Plans Today for Artemis Moon Mission Modified Test</h5>
-                            <p class="card-text">NASA will hold a media teleconference at 4 p.m. EDT today, Monday, April 11, to provide an update on the final major test of the agency’s mega Moon rocket and spacecraft on the launch pad at the agency’s Kennedy Space Center in Florida ahead of the uncrewed Artemis I lunar mission. </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">                
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/artemis_i_3_28_22.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Moon to Mars<i>Feb 09, 2018</i></p>
-                            <h5 class="card-title">Artemis I Map</h5>
-                            <p class="card-text">Artemis I will be the first integrated flight test of NASA’s deep space exploration system: the Orion spacecraft, Space Launch System (SLS) rocket and the ground systems at Kennedy Space Center in Cape Canaveral, Florida. </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/nhq202204040011.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Moon to Mars<i>Apr 05, 2022</i></p>
-                            <h5 class="card-title">NASA to Discuss Final Test Status Today Before Artemis Moon Mission</h5>
-                            <p class="card-text">NASA will hold a media teleconference at 4 p.m. EDT today on Tuesday, April 5, to provide another update on the final major test with the agency’s mega Moon rocket and Orion spacecraft at the launch pad ahead of the uncrewed Artemis I lunar mission.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/51982058640_3306aa1585_o.jpeg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Image of the Day<i>Apr 04, 2022</i></p>
-                            <h5 class="card-title">Space Launch System Rocket at Dawn</h5>
-                            <p class="card-text">NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard is seen at sunrise atop a mobile launcher at Launch Complex 39B, Monday, April 4, 2022.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/artemis_i_wet_dress_rehearsal.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Moon to Mars<i>Apr 03, 2022</i></p>
-                            <h5 class="card-title">NASA to Provide Update Today on Last Major Artemis Test Before Launch</h5>
-                            <p class="card-text">NASA will hold a media teleconference at 5:30 p.m. EDT today, Sunday, April 3, to discuss the status of the final major test with the agency’s mega Moon rocket and spacecraft at the launch pad ahead of the uncrewed Artemis I lunar mission. </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/nasa_sls_artemis_i_horizontal.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Moon to Mars<i>Mar 17, 2022</i></p>
-                            <h5 class="card-title">NASA Readies Rocket for Artemis I Wet Dress Rehearsal</h5>
-                            <p class="card-text">Engineers will conduct the final test, known as the wet dress rehearsal, of the Space Launch System (SLS) rocket, Orion spacecraft, and Exploration Ground Systems before the Artemis I launch at Launch Pad 39B at NASA’s Kennedy Space Center in Florida.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            <div class="card-deck" id="related-feed"></div>
         </div>
     </div>
 
@@ -272,4 +211,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="../js/articles.js"></script>
+    <script src="../js/feed.js" data-page="artemis" id="article-js"></script>
 </html>
