--- a/Missions/commercial-crew.html
+++ b/Missions/commercial-crew.html
@@ -161,68 +161,7 @@
             <div class="col-12">
                 <h1 class="mb-4">Related Stories</h1>
             </div>
-            <div class="card-deck">
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://live.staticflickr.com/65535/51846957064_3a87521ab8_c.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Media Release<i>Apr 12, 2022</i></p>
-                            <h5 class="card-title">NASA and SpaceX Adjust the Agency’s Crew-4 Launch Date</h5>
-                            <p class="card-text">>NASA and SpaceX now are targeting no earlier than 5:26 a.m. EDT Saturday, April 23, for the launch of the agency’s Crew-4 mission to the International Space Station from NASA’s Kennedy Space Center in Florida. </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/51846702013_a0cc55100a_k.jpeg?itok=Wv_WQikA">
-                        <div class="card-body">
-                            <p class="article-subtitle">Commercial Space<i>Mar 02, 22</i></p>
-                            <h5 class="card-title">NASA Invites Media to Next SpaceX Commercial Crew Space Station Launch</h5>
-                            <p class="card-text">Media accreditation now is open for the launch of the fourth SpaceX Crew Dragon spacecraft and Falcon 9 rocket that will carry astronauts to the International Space Station for a science expedition mission. This mission is part of NASA’s Commercial Crew Program.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">                
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/ccp_safety_feature_image_1_new.jpg?itok=jYOEMfbN">
-                        <div class="card-body">
-                            <p class="article-subtitle">NASA Kennedy<i>Jan 27, 2022</i></p>
-                            <h5 class="card-title">NASA’s Commercial Crew: Safety Always at the Forefront</h5>
-                            <p class="card-text">Safety is a core value woven into the fabric of NASA’s history – and its future.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/51404585793_8803f6e1aa_k.jpg?itok=V3fJ2ghD">
-                        <div class="card-body">
-                            <p class="article-subtitle">NASA Kennedy<i>Oct 21, 2021</i></p>
-                            <h5 class="card-title">NASA Invites Public to Share Excitement of NASA’s SpaceX Crew-3, #Crew3</h5>
-                            <p class="card-text">NASA is inviting the public to take part in virtual activities and events ahead of the launch of NASA’s SpaceX Crew-3 mission aboard a Falcon 9 rocket. </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/nasa_meatball_2.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Space Station<i>Oct 21, 2021</i></p>
-                            <h5 class="card-title">NASA Requests Information for American Crew Transportation to Space Station</h5>
-                            <p class="card-text">NASA released a request for information from American industry capable of providing safe, reliable, and cost-effective human space transportation services to and from the International Space Station to ensure a continuous human presence aboard the microgravity laboratory.https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/mann-cassada.jpg?itok=My-NiLNW</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/mann-cassada.jpg?itok=My-NiLNW">
-                        <div class="card-body">
-                            <p class="article-subtitle">Humans in Space<i>Oct 6, 2021</i></p>
-                            <h5 class="card-title">NASA Announces Astronaut Changes for Upcoming Commercial Crew Missions</h5>
-                            <p class="card-text">NASA has reassigned astronauts Nicole Mann and Josh Cassada to the agency’s SpaceX Crew-5 mission to the International Space Station as part of the Commercial Crew Program.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            <div class="card-deck" id="related-feed"></div>
         </div>
     </div>
 
@@ -272,4 +211,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="../js/articles.js"></script>
+    <script src="../js/feed.js" data-page="commercial" id="article-js"></script>
 </html>
