--- a/Topics/earth.html
+++ b/Topics/earth.html
@@ -116,68 +116,7 @@
             <div class="col-12">
                 <h1 class="mb-4">Related Stories</h1>
             </div>
-            <div class="card-deck">
-                <div class="col-lg-4">
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/insta_mockup.png">
-                        <div class="card-body">
-                            <p class="article-subtitle">Earth<i>Apr 08, 22</i></p>
-                            <h5 class="card-title">Connect with NASA on Social Media this Earth Day</h5>
-                            <p class="card-text">Life on Earth is chaotic and complex, and endlessly beautiful.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">                
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/pia25185.jpeg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Image of the Day<i>Apr 07, 2022</i></p>
-                            <h5 class="card-title">Japan's Geiyo Archipelago</h5>
-                            <p class="card-text">Japan's Geiyo Archipelago, in the Seito Inland Sea, was once home to pirates. From the 9th to the 16th centuries, the pirates dominated the Inland Sea and terrorized the coasts of East Asia</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/51982552683_915c5cb164_k.jpg?itok=uefIs8G-">
-                        <div class="card-body">
-                            <p class="article-subtitle">Climate<i>Apr 06, 2022</i></p>
-                            <h5 class="card-title">NASA, Australian Space Agency Collaborate on Earth Science</h5>
-                            <p class="card-text">NASA and the Australian Space Agency are continuing their 60-year successful partnership to study Earth's changing climate.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/1-groundwater-final-16_0.jpg?itok=IyFS78Uu">
-                        <div class="card-body">
-                            <p class="article-subtitle">Water<i>Apr 05, 2022</i></p>
-                            <h5 class="card-title">NASA Finds New Way to Monitor Underground Water Loss</h5>
-                            <p class="card-text">Scientists have produced a new method that holds the promise of improving groundwater management – critical to both life and agriculture in dry regions</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/forest_image_usgs.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Climate<i>Apr 05, 2022</i></p>
-                            <h5 class="card-title">NASA Releases Breakthrough Forest Biomass-Carbon Product</h5>
-                            <p class="card-text">NASA’s GEDI mission has reached a major milestone with the release of its newest data product, which provides the first near-global estimate of aboveground forest biomass and the carbon it stores – filling a key gap in climate research.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/airlusi1b.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">NASA Armstrong<i>Apr 04, 2022</i></p>
-                            <h5 class="card-title">NASA Uses Moonlight to Improve Satellite Accuracy</h5>
-                            <p class="card-text">NASA’s airborne Lunar Spectral Irradiance, or air-LUSI, flew aboard NASA’s ER-2 aircraft from March 12 to 16 to accurately measure the amount of light reflected off the Moon.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            <div class="card-deck" id="related-feed"></div>
         </div>
     </div>
 
@@ -227,4 +166,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="../js/articles.js"></script>
+    <script src="../js/feed.js" data-page="earth" id="article-js"></script>
 </html>
