--- a/Topics/humans-in-space.html
+++ b/Topics/humans-in-space.html
@@ -115,68 +115,7 @@
             <div class="col-12">
                 <h1 class="mb-4">Related Stories</h1>
             </div>
-            <div class="card-deck">
-                <div class="col-lg-4">
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/nasa-astronaut-obstacle-course-1.jpg?itok=jv05hb-4">
-                        <div class="card-body">
-                            <p class="article-subtitle">Human Research<i>Apr 12, 22</i></p>
-                            <h5 class="card-title">New Tests Evaluate Mission Readiness of Astronauts Upon Landing</h5>
-                            <p class="card-text">Have you ever felt off-balance after being on amusement rides or gotten motion sickness on a boat? Astronauts feel something similar that can be more intense when they return to Earth from space.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">                
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/51797281509_b6843d98c4_k.jpeg?itok=STcG1NoG">
-                        <div class="card-body">
-                            <p class="article-subtitle">Crew-3<i>Apr 11, 2022</i></p>
-                            <h5 class="card-title">NASA’s SpaceX Crew-3 Astronauts to Discuss Mission, Splashdown</h5>
-                            <p class="card-text">As they prepare to return to Earth later this month, NASA’s SpaceX Crew-3 astronauts will answer media questions about their time aboard the International Space Station during an in-orbit news conference at 1:20 p.m. EDT Friday, April 15.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/ax-1.jpg?itok=YhTXapTQ">
-                        <div class="card-body">
-                            <p class="article-subtitle">Low-Earth Orbit Economy<i>Apr 08, 2022</i></p>
-                            <h5 class="card-title">Axiom Private Astronauts Headed to International Space Station</h5>
-                            <p class="card-text">Four private astronauts are in orbit following the successful launch of Axiom Mission 1 (Ax-1), the first all private astronaut mission to the International Space Station. Axiom Space astronauts lifted off at 11:17 a.m. EDT on Friday, April 8, from Launch Complex 39A at NASA’s Kennedy Space Center in Florida.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/edu_epscor_ne_prop.jpg?itok=BlXC7Zfq">
-                        <div class="card-body">
-                            <p class="article-subtitle">Space Station<i>Apr 06, 2022</i></p>
-                            <h5 class="card-title">NASA Selects Universities for Space Station Research Opportunities</h5>
-                            <p class="card-text">Five universities were chosen by NASA for grants to provide students with opportunities to design research experiments that will be conducted on the International Space Station. The selections are part of the agency’s Established Program to Stimulate Competitive Research or EPSCoR.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/seedz.jpg?itok=YBeAoXS4">
-                        <div class="card-body">
-                            <p class="article-subtitle">NASA Kennedy<i>Apr 05, 2022</i></p>
-                            <h5 class="card-title">Kennedy Scientists Develop New Way to Plant, Nourish Seeds in Space</h5>
-                            <p class="card-text">What started five years ago as a casual conversation among a small group at NASA’s Kennedy Space Center recently showed results that one day may help feed astronauts on long-duration space missions.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/iss065e335291_0.jpg?itok=io6LjU7j">
-                        <div class="card-body">
-                            <p class="article-subtitle">Space Station<i>Apr 01, 2022</i></p>
-                            <h5 class="card-title">NASA Astronaut to Discuss American Space Record in News Conference</h5>
-                            <p class="card-text">NASA astronaut Mark Vande Hei, back on Earth after breaking the record for the longest single spaceflight in history by an American, will participate in a virtual news conference at 10 a.m. EDT Tuesday, April 5, from the agency’s Johnson Space Center in Houston.                            </p>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            <div class="card-deck" id="related-feed"></div>
         </div>
     </div>
 
@@ -226,4 +165,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="../js/articles.js"></script>
+    <script src="../js/feed.js" data-page="humans" id="article-js"></script>
 </html>
