--- a/Topics/moon-to-mars.html
+++ b/Topics/moon-to-mars.html
@@ -111,68 +111,7 @@
             <div class="col-12">
                 <h1 class="mb-4">Related Stories</h1>
             </div>
-            <div class="card-deck">
-                <div class="col-lg-4">
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/nasa-astronaut-obstacle-course-1.jpg?itok=jv05hb-4">
-                        <div class="card-body">
-                            <p class="article-subtitle">Human Research<i>Apr 12, 22</i></p>
-                            <h5 class="card-title">New Tests Evaluate Mission Readiness of Astronauts Upon Landing</h5>
-                            <p class="card-text">Have you ever felt off-balance after being on amusement rides or gotten motion sickness on a boat? Astronauts feel something similar that can be more intense when they return to Earth from space.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">                
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/ubernode_alt_horiz/public/thumbnails/image/artemis_plan_web_banner.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Artemis<i>Sep 21, 2020</i></p>
-                            <h5 class="card-title">NASA Publishes Artemis Plan to Land First Woman, Next Man on Moon in 2024</h5>
-                            <p class="card-text">Following a series of critical contract awards and hardware milestones, NASA has shared an update on its Artemis program, including the latest Phase 1 plans to land the first woman and the next man on the surface of the Moon in 2024.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/mars_2020_toolkit_header.jpg?itok=f-aC3lth">
-                        <div class="card-body">
-                            <p class="article-subtitle">Moon to Mars<i>Mar 16, 2022</i></p>
-                            <h5 class="card-title">Connect Students to #CountdownToMars</h5>
-                            <p class="card-text">The Mars helicopter, Ingenuity, hitched a ride to Mars on the Perseverance rover and is preparing for its first flight. This technology demonstration will test powered flight on another world for the first time.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/51989954220_d70bbb03da_k.jpg?itok=A4HAwx7-">
-                        <div class="card-body">
-                            <p class="article-subtitle">Artemis<i>Apr 11, 2022</i></p>
-                            <h5 class="card-title">NASA to Discuss Plans Today for Artemis Moon Mission Modified Test</h5>
-                            <p class="card-text">NASA will hold a media teleconference at 4 p.m. EDT today, Monday, April 11, to provide an update on the final major test of the agency’s mega Moon rocket and spacecraft on the launch pad at the agency’s Kennedy Space Center in Florida ahead of the uncrewed Artemis I lunar mission. </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width/public/thumbnails/image/1-pia25176-curiositys-360-degree-panorama-of-greenheughs-gator-back-rocks-web.jpg?itok=utsbX7RS">
-                        <div class="card-body">
-                            <p class="article-subtitle">Mars<i>Apr 07, 2022</i></p>
-                            <h5 class="card-title">NASA’s Curiosity Mars Rover Reroutes Away From ‘Gator-Back’ Rocks</h5>
-                            <p class="card-text">NASA’s Curiosity Mars rover spent most of March climbing the “Greenheugh Pediment” – a gentle slope capped by rubbly sandstone. The rover briefly summited this feature’s north face two years ago; now on the pediment’s southern side, Curiosity has navigated back onto the pediment to explore it more fully.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="../article.html" class="card">
-                        <img class="article-img-wide" src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/hera-crew-exercise.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Human Research<i>Apr 07, 2022</i></p>
-                            <h5 class="card-title">NASA’s HERA Analog Crew Member Takes Spin on Exercise Bike</h5>
-                            <p class="card-text">During Campaign 6, Mission 1, crew member Christopher Roberts takes a spin on a stationary bicycle inside the exercise area of the Human Exploration Research Analog, or HERA.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            <div class="card-deck" id="related-feed"></div>
         </div>
     </div>
 
@@ -222,4 +161,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="../js/articles.js"></script>
+    <script src="../js/feed.js" data-page="moon" id="article-js"></script>
 </html>
