--- a/index.html
+++ b/index.html
@@ -101,63 +101,7 @@
             
             <!-- Latest Articles -->
             <div class="col-lg-5">
-                <ul class="article-list-ver">
-                    <li>
-                        <a href="article.html" class="row article-item my-2">
-                            <div class="col-lg-3">
-                                <img class="article-img" src="img/home-2.jpg">
-                            </div>
-                            <div class="col-lg-9">
-                                <p class="article-subtitle">Webb Telescope<i>3 hours ago</i></p>
-                                <h5 class="article-latest-title">NASA’s Webb Reaches Alignment Milestone, Optics Working Successfully</h5>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="article.html" class="row article-item my-2">
-                            <div class="col-lg-3">
-                                <img class="article-img" src="img/home-3.jpg">
-                            </div>
-                            <div class="col-lg-9">
-                                <p class="article-subtitle">Spitzer Telescope<i>5 hours ago</i></p>
-                                <h5 class="article-latest-title">NASA Spots Giant Debris Cloud Created by Clashing Celestial Bodies</h5>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="article.html" class="row article-item my-2">
-                            <div class="col-lg-3">
-                                <img class="article-img" src="img/home-4.jpg">
-                            </div>
-                            <div class="col-lg-9">
-                                <p class="article-subtitle">Parker Solar Probe<i>10 hours ago</i></p>
-                                <h5 class="article-latest-title">NASA Mourns Passing of Visionary Heliophysicist Eugene Parker</h5>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="article.html" class="row article-item my-2">
-                            <div class="col-lg-3">
-                                <img class="article-img" src="img/home-5.jpg">
-                            </div>
-                            <div class="col-lg-9">
-                                <p class="article-subtitle">Asteroids<i>12 hours ago</i></p>
-                                <h5 class="article-latest-title">NASA System Predicts Impact of Small Asteroid</h5>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="article.html" class="row article-item my-2">
-                            <div class="col-lg-3">
-                                <img class="article-img" src="img/home-6.jpg">
-                            </div>
-                            <div class="col-lg-9">
-                                <p class="article-subtitle">Mars<i>13 hours ago</i></p>
-                                <h5 class="article-latest-title">NASA Extends Ingenuity Helicopter Mission</h5>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
+                <ul class="article-list-ver" id="latest-feed"></ul>
             </div>
         </div>
         </div>
@@ -195,68 +139,7 @@
             <div class="col-12 px-3">
                 <h1 class="mb-4">All Stories</h1>
             </div>
-            <div class="card-deck">
-                <div class="col-lg-4">
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="img/home-8.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
-                            <h5 class="card-title">Artemis I in Moonlight</h5>
-                            <p class="card-text">Earth's Moon is seen rising behind NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard atop a mobile launcher as it rolls out to Launch Complex 39B for the first time, Thursday, March 17, 2022, at NASA’s Kennedy Space Center in Florida.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">                
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="img/home-9.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Equinox<i>Mar 18, 2022</i></p>
-                            <h5 class="card-title">March Equinox Welcomes ‘Astronomical’ Spring</h5>
-                            <p class="card-text">Did you know our planet has two types of seasons? They are meteorological and astronomical. What’s the difference?</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 mb-4">    
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="img/home-10.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Spacewalk<i>Mar 16, 2022</i></p>
-                            <h5 class="card-title">NASA Astronauts Complete Spacewalk for Solar Array Work</h5>
-                            <p class="card-text">NASA astronauts Kayla Barron and Raja Chari concluded their spacewalk at 3:06 p.m. EDT after 6 hours and 54 minutes in preparation for upcoming solar array installation.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="img/home-11.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Webb Telescope<i>Mar 14, 2022</i></p>
-                            <h5 class="card-title">NASA to Discuss Progress as Webb Telescope’s Mirrors Align</h5>
-                            <p class="card-text">NASA will hold a virtual media briefing at noon EDT Wednesday, March 16, to provide an update on the James Webb Space Telescope’s mirror alignment. The briefing will air live on NASA TV, the NASA app, and the agency’s website.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="img/home-12.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Expedition 66<i>Mar 13, 2022</i></p>
-                            <h5 class="card-title">NASA to Air Briefing, Spacewalks to Upgrade Space Station</h5>
-                            <p class="card-text">Crew members from International Space Station Expedition 66 will conduct two spacewalks Tuesday, March 15, and Wednesday, March 23, to continue upgrades to the orbiting laboratory.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4">    
-                    <a href="article.html" class="card">
-                        <img class="article-img-wide" src="img/home-13.jpg">
-                        <div class="card-body">
-                            <p class="article-subtitle">Space Station Research<i>Mar 9, 2022</i></p>
-                            <h5 class="card-title">Three Space Station Studies Helping Scientists Understand the Early Universe</h5>
-                            <p class="card-text">Research conducted aboard the International Space Station is helping scientists answer questions about the formation of the universe and origins of life on Earth.</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            <div class="card-deck" id="related-feed"></div>
         </div>
     </div>
     </div>
@@ -307,4 +190,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="js/articles.js"></script>
+    <script src="js/feed.js" data-page="home" id="article-js"></script>
 </html>
